--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,7 +8,7 @@ services:
     networks:
       - backend
     volumes:
-      - ./src:/var/www/html/
+      - ${PROJECT_ROOT}/:/var/www/html/
     container_name: php
   apache:
     build:
@@ -30,16 +30,16 @@ services:
     image: mysql:${MYSQL_VERSION:-latest}
     restart: always
     ports:
-      - "3307:3307"
+      - "3306:3306"
     volumes:
             - data:/var/lib/mysql
     networks:
       - backend
     environment:
-      MYSQL_ROOT_PASSWORD: 'Freenoff@9'
-      MYSQL_DATABASE: 'db'
-      MYSQL_USER: 'user'
-      MYSQL_PASSWORD: 'Freenoff@9'
+      MYSQL_ROOT_PASSWORD: test
+      MYSQL_DATABASE: Db
+      MYSQL_USER: user
+      MYSQL_PASSWORD: test
     container_name: mysql
 networks:
   frontend:
